# reference/public-v1.openapi.json
@@ -4232,6 +4232,19 @@
                   "timelineDesc",
                   "publishedAtDesc"
                 ]
+              },
+              "domain": {
+                "type": "string",
+                "enum": [
+                  "all",
+                  "robotics",
+                  "agents",
+                  "interaction",
+                  "play",
+                  "biology",
+                  "natural-history",
+                  "sociology"
+                ]
               }
             }
           },
